--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
   <string name="hd_url_label">HD URL:</string>
   <string name="sign_out">Sign out</string>
   <string name="login_failure">unable to sign in with the provided credentials</string>
+  <string name="download_image">Download image</string>
 
 </resources>
