Added download functionality.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,6 @@
   <string name="sign_out">Sign out</string>
   <string name="login_failure">unable to sign in with the provided credentials</string>
   <string name="download_image">Download image</string>
+  <string name="image_downloaded">Image downloaded</string>
 
 </resources>
